--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
                     <%= link_to 'Travel', '#' %>
                 </li>
                 <li class='nav-list'>
-                    <%= link_to 'Blog', posts_path %>
+                    <%= link_to 'Travel Info', posts_path %>
                 </li>
                 <li class='nav-list'>
                     <%= link_to 'Contact', contact_path %>
@@ -35,9 +35,6 @@
                 
                 <li class='nav-list'>
                     <%= link_to 'Sign in', user_session_path %>
-                </li>
-                <li class='nav-list'>
-                    <%= link_to 'Sign up', new_user_registration_path %>
                 </li>
                 
                 <% end %>
