--- a/app/assets/stylesheets/search_flights.css.scss
+++ b/app/assets/stylesheets/search_flights.css.scss
@@ -1,13 +1,691 @@
 // Place all the styles related to the search_flights controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-div.paw-icon {
-    display:inline-block;
-    background-image: image-url('paw_icon.png');
-    background-position: 0px 0px;
-    background-size:35px;
-    background-repeat:no-repeat;
-    height:35px;
-    width:35px;
-}
+    div.paw-icon {
+        display:inline-block;
+        background-image: image-url('paw_icon.png');
+        background-position: 0px 0px;
+        background-size:35px;
+        background-repeat:no-repeat;
+        height:35px;
+        width:35px;
+    }
 
+    div.side-left {
+        float:left;
+        width:15%;
+        max-width:300px;
+        margin:20px 0px 0px 5px;
+        overflow:hidden;
+    }
+    
+    div.side-content{
+        height:600px;
+        padding:5px;
+        border:solid 1px pink;
+        border-radius:5px;
+    }
+    
+    div.side-ads {
+        height:300px;
+        padding:5px;
+        margin: 10px 0px 10px 0px;
+        border:solid 1px pink;
+        border-radius:5px;
+    }
+    
+    div.side-right {
+        float:left;
+        width:18%;
+        max-width:300px;
+        margin:20px 0px 0px 0px;
+        overflow:hidden;
+    }
+    
+    div.middle {
+        display:inline-block;
+        float:left;
+        width:60%;
+        min-height:200px;
+        max-width:900px;
+        position:relative;
+        transition: 0.2s width;
+        padding:10px;
+        margin:10px;
+    }
+    div .col-12 {
+        width:100%;
+        padding:10px;
+    }
+
+    div.col-6 {
+        width:42%;
+        padding:10px;
+    }
+
+    div.col-4 {
+        width:20%;
+        padding:10px;
+    }
+
+    div.result-box {
+        position:relative;
+        border: solid 1px transparent;
+        padding:10px;
+        margin: 20px auto 20px auto;
+        width:90%;
+        font-family:sans-serif;
+        font-size:14px;
+        transition: 0.2s border;
+    }
+    
+    div.result-box:hover {
+        border: solid 1px #999;
+    }
+    
+    div.rb-main-info {
+        width:23%;
+        max-width:150px;
+        float:left;
+        
+    }
+    
+    div.expensive-flag {
+        display:inline-block;
+        width:96px;
+    }
+    
+    div.expensive-flag-text {
+        display:inline-block;
+        background-color:#ff944d;
+        color:white;
+        border-radius:5px;
+        border:outset 1px #ffce99;
+        padding:2px;
+        font-weight:bolder;
+        font-family:sans-serif;
+        box-shadow: 1px 1px 3px rgba(30,30,5,0.5);
+    }
+    
+    div.view-flight-button {
+        display:inline-block;
+        background-color:#45106e;
+        border-radius:5px;
+        border:outset 1px #45106e;
+        margin:10px 0px 20px 10px;
+        transition: 0.2s background;
+    }
+    
+    div.view-flight-button:hover {
+        display:inline-block;
+        background-color:#8745b3;
+        border-radius:5px;
+        border:outset 1px #8745b3;
+        margin:10px 0px 20px 10px;
+    }
+    
+    div.view-flight-button a{
+        color:white;
+        text-decoration:none;
+        font-weight:bold;
+        padding:5px;
+    }
+    
+   
+    
+    div.flight-carrier {
+        display:block;
+        font-size:14px;
+        color: #444;
+        padding: 0px 0px 0px 5px;
+    }
+    
+    div.flight-time {
+        display:inline-block;
+        padding:5px;
+    }
+    
+    div.sb-container {
+        display:inline-block;
+        width:100%;
+        float:left;
+        padding:10px 0px 10px 0px;
+    }
+    
+    span.flight-destination {
+        font-weight:bold;
+    }
+    
+    span.flight-grey {
+        padding:0px 5px 0px 5px;
+        color:#777
+    }
+    
+    span.flight-stops {
+        
+        color:#45106e;
+    }
+    
+    div.flight-time.stops {
+        
+    }
+    
+    header.flight-search-header {
+
+        width:100%;
+        position:relative;
+    }
+    
+    header div.search-header-cities {
+        display:inline-block;
+        padding:10px;
+    }
+    
+    
+    div.flight-extra-info {
+        clear:both;
+        width:100%;
+        display:block;
+        border:solid 1px black;
+    }
+    
+    button.change-flight, input.change-flight {
+        padding:5px 15px 5px 15px;
+        border-radius:5px;
+        background-color:#45106e;
+        border: 1px groove #8745b3;
+        color:white;
+        font-size:14px;
+        font-family:sans-serif;
+        font-weight:bold;
+        cursor:pointer;
+    }
+    
+    button.change-flight:hover, input.change-flight:hover {
+        background-color:#8745b3;
+        border: 1px outset #8745b3;
+    }
+    
+    div.flight-header {
+        position:relative;
+        display:block;
+        text-align:center;
+    }
+    div.flight-header div.search-header-cities {
+            display:inline-block;
+            padding: 0px 5px 0px 5px;
+        }
+    div.form-short-col-3 {
+        width:15%;
+        display:inline-block;
+    }
+    
+    div.form-short-col-2 {
+        width:100%;
+        display:block;
+        position: relative;
+    }
+    
+    button.passengers {
+        
+    }
+    
+    div.short-form {
+        display:none;
+    }
+    
+    div.passengers-container {
+        display:inline-block;
+        position:relative;
+    }
+    
+    label.passengers {
+        width:40%;
+        display:inline-block;
+    }
+    
+    select.passengers {
+        width:40%;
+        display:inline-block;
+    }
+    
+    div.passengers {
+        position:absolute; 
+        top:20px;
+        left:0px;
+        background-color:white;
+        border:1px solid black;
+        width:200px;
+        z-index:1;
+        font-family:sans-serif;
+        font-size:12px;
+    }
+    
+    form div.short-form-group input {
+        padding:4px 5px;
+        font-size:12px;
+        border: solid 1px transparent;
+        border-color: #45106e #8828ab #45106e;
+        border-radius:4px;
+        width:80%;
+    }
+    
+    div.extra-information {
+        clear:left;
+        display:none;
+    }
+    
+    div.extra-info-body {
+        
+    }
+    
+    div.result-box:focus div.extra-information{
+        display:block;
+    }
+    
+    div.extra-info-menu {
+        display:inline-block;
+        padding:10px 20px 10px 20px;
+    }
+    
+    div.extra-info-menu.on {
+        display:inline-block;
+        margin-bottom: -1px;
+        padding:10px 20px 10px 20px;
+        border-top:solid 1px #BBB;
+        border-left:solid 1px #BBB;
+        border-right:solid 1px #BBB;
+        border-bottom:solid 5px #FFF;
+    }
+    
+    div.extra-info-menu.off {
+        display:inline-block;
+        margin-bottom: 0px;
+        padding:10px 20px 10px 20px;
+        border-top:solid 1px #FFF;
+        border-left:solid 1px #FFF;
+        border-right:solid 1px #FFF;
+        border-bottom:solid 1px transparent;
+    }
+    
+    div.flight-right-col {
+        display:block;
+        width:77%;
+        float:left;
+    }
+    
+    div.extra-info-header {
+        display:block;
+        clear:left;
+        border-bottom: solid 1px #BBB;
+    }
+    
+    h2.extra-info-title {
+        clear:left;
+        border-bottom:solid 1px #CCC;
+        margin: 10px auto 0px auto;
+        padding-left: 5px;
+        font-size:16px;
+        color:#555;
+    }
+    
+    div.flight-fare-row {
+        display:block;
+        font-size:14px;
+        color: #444;
+        padding: 0px 0px 0px 5px;
+    }
+    
+    div.flight-fare-left-col {
+        display:inline-block;
+        width:20%;
+        text-align:left;
+    }
+    
+    div.flight-fare-right-col {
+        display:inline-block;
+        width:40%;
+        text-align:left;
+    }
+    
+    div.extra-info-details-wrapper.on {
+        display:block;
+    }
+    
+    div.extra-info-details-wrapper.off {
+        display:none;
+    }
+    
+    div.extra-info-fares-wrapper.on {
+        display:block;
+    }
+    
+    div.extra-info-fares-wrapper.off {
+        display:none;
+    }
+    
+    div.pagination {
+        margin: 0 auto;  
+    }
+    
+    div.pagination ul.Paginate {
+        list-style-type:none;
+        display:block;
+        margin: 0 auto;
+        width:300px;
+    }
+    
+    div.pagination ul.Paginate li{
+        display:inline-block;
+        padding:5px 10px 5px 10px;
+        margin: 0px 5px 0px 5px;
+        border:solid 1px black;
+        cursor:pointer;
+    }
+    
+    div.flight-time.flightDepart{
+        position:relative;
+    }
+    
+    span.flight-destination-name {
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0s, opacity 0.2s linear;
+        position:absolute;
+        top:-24px;
+        left:17px;
+        width:auto;
+        white-space:nowrap;
+        background-color:#666;
+        color: #FFF;
+        padding:2px 5px 2px 5px;
+        border-radius:5px;
+        border: solid 1px #444;
+    }
+    
+    span.flight-desc-pointer {
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0s, opacity 0.2s linear;
+        position:absolute;
+        top:-3px;
+        left:59px;
+        width: 0; 
+        height: 0; 
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+
+        border-top: 10px solid #666;
+    }
+    
+    span.flight-destination-iata:hover span.flight-destination-name, span.flight-destination-iata:hover span.flight-desc-pointer {
+        visibility: visible;
+        opacity: 1;
+    }
+    
+    div.loader-image img {
+        margin: 100px auto 20px auto;
+        display:block;
+        height:50px;
+        width:50px;
+    }
+    p.loader {
+        text-align:center;
+    }
+
+    div.loader {
+        height:10px;
+        width:80%;
+        background-color:transparent;
+        margin: 10px auto;
+    }
+
+    div.loader-fill {
+        width:0%;
+        height:100%;
+        background-color:#9036ba;
+        animation-name: loader;
+        animation-duration: 10s;
+        animation-delay: 1s;
+        animation-iteration-count: infinite;
+        animation-direction: reverse;
+    }
+
+    @keyframes loader {
+        from {width: 100%;}
+        to {width: 0%;}
+    }
+
+
+
+    
+    button.show-flight-button {
+        background-color:transparent;
+        border: none;
+        color:white;
+        outline:none;
+        cursor:pointer;
+        font-family:sans-serif;
+        font-weight:bold;
+        padding:5px 8px 5px 8px;
+    }
+
+
+/////////////////////////////
+    ///////// Show Page CSS
+////////////////////////////
+
+
+
+     div.side-col {
+        float:left;
+        border:solid 1px transparent;
+        background-color: #DFDFDF;
+        width:34%;
+        padding:10px;
+        transition: width 0.2s;
+    }
+    div.main-content {
+        width:60%;
+        float:left;
+        border: solid 1px transparent;
+        padding:10px;
+        margin-right:10px;
+    }
+    
+    div.side-col.ad-place {
+        background-color: transparent;
+        border: solid 1px #AAA;
+        height:100%;
+        width:300px;
+        margin:10px auto;
+    }
+
+    a.toggle-fares {
+        text-decoration:none;
+        margin-right: 3px;
+        
+    }
+    
+    span.passenger-info {
+        display:block;
+    }
+    
+    div.search-price {
+        border-top: solid 1px black;
+        width:100%;
+        display:inline-block;
+        margin: 5px 10px 5px 0px;
+        padding-top:5px;
+        font-weight:bold;
+        font-size:1.7em;
+        color:#555;
+        text-align:right;
+    }
+    
+    h3.trip-sum-title {
+        display:inline-block;
+    }
+    h3.trip-sum-title.right {
+        float:right;
+        margin: 1em 10px 1em 10px;
+        max-width: 200px;
+    }
+    
+    h3.trip-sum-title.right span {
+        font-size:0.8em;
+        color:#555;
+        padding:3px;
+    }
+    span.price-info {
+        display:inline-block;
+        float:right;
+    }
+    
+    div.trip-fare-row {
+        float:left;
+        width:100%;
+    }
+    
+    div.trip-fare-row.in{
+        width:92%;
+        margin: 0px 10px;
+    }
+    
+    div#trip-fares {
+        
+    }
+    
+    span.total-price-main {
+        font-size: 0.5em;
+        color: #333;
+        font-weight:bold;
+        padding-right:5px;
+    }
+    
+    span.price-info-GPB {
+        font-size:0.8em;
+        font-weight:bold;
+        color:#444;
+        
+    }
+    
+    ul.col-6 {
+        font-family:sans-serif;
+        width:37%;
+        float:left;
+        padding-left:30px;
+        margin: 10px 0px 10px 0px;
+    }
+    
+    ul.col-12 {
+        font-family:sans-serif;
+        width:100%;
+        padding-left:30px;
+        margin: 10px 0px 10px 0px;
+    }
+    div.container p {
+        font-weight:bold;
+    }
+    
+    b.red-important {
+        color:red;
+    }
+    
+    /* Medium Devices, Tablets */
+    @media only screen and (max-width : 992px) {
+        div.side-col {
+            float:left;
+            width:32%;
+
+        }
+        
+        div.main-content {
+            width:60%;
+            float:left;
+            padding:10px;
+        }
+    }
+    
+    @media only screen and (max-width : 768px) {
+        div.side-col {
+            float:left;
+            width:29%;
+            padding:10px;
+        }
+        
+        div.main-content {
+            width:60%;
+            float:left;
+            padding:10px;
+        }
+        
+        div.middle{
+            margin: 10px;
+            padding:10px;
+            width:60%;
+            transition: 0.2 width;
+        }
+        
+        div.side-inner {
+            display:none;
+            background-color:rgba(0, 0, 0, 0.5);
+        }
+        
+        div.side-left a.ham-icon {
+            display:inline-block;
+        }
+        div.side-left {
+            position:absolute;
+            top:0px;
+            left:-7px;
+            height:50px;
+            width:65px;
+            z-index:2;
+        }
+        
+        div.side-right {
+            width:30%;
+        }
+        div.middle header {
+            margin-left:50px;
+            width:70%;
+        }
+        div.flight-header div.search-header-cities {
+            text-align:center;
+            display:block;
+            padding: 0px 5px 0px 5px;
+        }
+        
+    /* Small Devices, Small Tablets */
+    @media only screen and (max-width : 480px) {
+        div.side-col {
+            float:none;
+            width:100%;
+            padding:0px;
+        }
+        
+        div.main-content {
+            width:95%;
+            float:none;
+            padding:10px;
+        }
+        div.middle{
+            margin: 10px;
+            padding:10px;
+            width:95%;
+        }
+        
+        div.side-right {
+            width:95%;
+            margin:10px auto;
+            float:none;
+        }
+        
+        div.side-ads {
+            margin:0 auto;
+        }
+        
+        
+    }
+    }
